menu sem looping

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <h1>Escolha uma das regiões abaixo:</h1>
+      <p>0. Brasil</p>
+      <p>1. Norte</p>
+      <p>2. Norderte</p>
+      <p>3. Sudeste</p>
+      <p>4. Sul</p>
+      <p>5. Centro-Oeste</p>
   </body>
 </html>
